tests/baselines/reference/plusOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/plusOperatorInvalidOperations.ts (2 errors) ====
    // Unary operator +
    var b;
    
    // operand before +
    var result1 = b+;   //expect error
                    ~
!!! error TS1003: Identifier expected.
    
    // miss  an operand
    var result2 =+;
                  ~
!!! error TS1003: Identifier expected.